--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li class="Character"><span></span>At Least 8 Characters</li>
                 </ul>
             </div>
-            <input class="submit active" type="submit" value="Login">
+            <input class="submit active" type="submit" value="Sign-up">
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js"
